--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    font-size: 14px;
+    font-size: 15px;
     font-family: 'Barlow Semi Condensed', sans-serif;
     background-color: hsl(210, 46%, 95%);
 }
@@ -56,14 +56,22 @@ img {
 .left-top-side .card-0 {
     background-color: hsl(263, 55%, 52%);
     color: white;
+    flex-basis: 70%;
 }
 .left-top-side .card-1 {
     background-color: hsl(217, 19%, 35%);
     color: white;
+    flex-basis: 30%;
 }
 .left-bottom-side .card-0 {
     background-color: white;
     color: hsl(217, 19%, 35%);
+    flex-basis: 30%;
+}
+.left-bottom-side .card-1 {
+    background-color: hsl(219, 29%, 14%);
+    color:white;
+    flex-basis: 70%;
 }
 .left-bottom-side .card-0 .name-title-div {
     color: hsl(219, 29%, 14%);
@@ -75,17 +83,13 @@ img {
     background-color: white;
     color: hsl(217, 19%, 35%);
 }
-.left-bottom-side .card-1 {
-    background-color: hsl(219, 29%, 14%);
-    color:white;
-}
 .card-0 , .card-1 {
     padding: 20px;
     border-radius: 10px;
     margin-top: 22px;
 }
 
-@media (min-width: 576px){
+@media (min-width: 738px){
     .container {
         flex-direction: row;
         margin: 5% 15%;
